--- a/_templates/page.html
+++ b/_templates/page.html
@@ -81,7 +81,7 @@
 </script>
 
 <script async defer src="//hypothes.is/embed.js"></script>
-
+<script>window.hypothesisConfig=function(){return{showHighlights:true};</script>
 {% endblock %}
 
 {#########################}
