--- a/_templates/page.html
+++ b/_templates/page.html
@@ -80,6 +80,7 @@
 
 </script>
 
+<link rel="canonical" href="http://2015-may-nonmodel.readthedocs.org/en/latest/"/>
 <script async defer src="//hypothes.is/embed.js"></script>
 <script>window.hypothesisConfig=function(){return{showHighlights:true};</script>
 {% endblock %}
