--- a/_templates/page.html
+++ b/_templates/page.html
@@ -16,6 +16,11 @@
 
 {%- set render_sidebar = 0 %}
 
+{% block linktags %}
+{{ super() }}
+<link rel="canonical" href="http://2015-may-nonmodel.readthedocs.org/en/latest/"/>
+{% endblock %}
+
 {##################################################}
 {# for plone-derived "edit me" & Google analytics #}
 {##################################################}
@@ -80,7 +85,6 @@
 
 </script>
 
-<link rel="canonical" href="http://2015-may-nonmodel.readthedocs.org/en/latest/"/>
 <script async defer src="//hypothes.is/embed.js"></script>
 <script>window.hypothesisConfig=function(){return{showHighlights:true};</script>
 {% endblock %}
